# NFL_Agent

./: .gitignore  CODE_REVIEW.md  LICENSE  app_st_nfl_agent.py  mcp_nfl_metrics_server.py  metrics_executor.py  pyproject.toml
NFL_Agent/: agent_app_w_mcp.ipynb  app_st_nfl_agent.py  mcp_nfl_metrics_server.py  metrics_executor.py  requirements_mcp.txt
NFL_Agent/prompts/: planner_system.txt
NFL_Agent/tests/: tests_executor.ipynb
archive/: archive_data_cleaning_nfl_agent.ipynb  archive_demo_for_qb_stats.ipynb
prompts/: answering_style.md  planner_system.txt
