[project]
name = "nfl-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.27.0",
    "nflreadpy>=0.1.5",
    "openai-agents>=0.14.2",
    "polars>=1.5",
    "streamlit>=1.56.0",
    "uvicorn>=0.44.0",
]
